2008-01-16  Dan Winship  <danw@gnome.org>

	* libsoup/soup-headers.c (soup_headers_parse_status_line): Deal
	with Shoutcast servers, which return "ICY 200 OK", but are
	otherwise straight HTTP/1.0. #502325, Wouter Cloetens.

	* tests/header-parsing.c (resptests): add a test for it

2008-01-16  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c (authorize_handler, etc): Allow the
	session authenticate signal to be handled asynchronously, by
	pausing the message and then authenticating the auth later.
	(auth_type_compare_func): make this work. oops.
	(extract_challenge): plug leak

	* libsoup/soup-auth-manager-ntlm.c: Make this work async too.

	* libsoup/soup-headers.c (soup_header_parse_list):
	(soup_header_parse_param_list): plug leaks

	* tests/auth-test.c (do_async_auth_test): test async auth

	* docs/reference/client-howto.xml (Handling Authentication):
	mention async auth

2008-01-16  Dan Winship  <danw@gnome.org>

	* configure.in: Bomb out if glib 2.15.0 isn't found.
	(AM_PATH_GLIB_2_0 doesn't do this itself.)

2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager-ntlm.c: Replaces SoupConnectionNTLM;
	now works as a SoupSession::request_started watcher.

	* libsoup/soup-connection.c: remove the no-longer-needed
	"authenticate" signal

	* libsoup/soup-session.c: Use a SoupAuthManagerNTLM if USE_NTLM is
	set. Remove connection-authenticate-signal references.

2008-01-15  Dan Winship  <danw@gnome.org>

	* Merge libsoup-2.4 branch to trunk
	
2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-dns.c (resolve_status): Fix the logic here

2008-01-15  Dan Winship  <danw@gnome.org>

	* docs/reference/porting-2.2-2.4.xml: add a few more updates

2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-digest.c: Use GChecksum for MD5

	* libsoup/soup-md5-utils.[ch]: gone

2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (soup_server_run_async):
	(soup_server_quit): Don't ref/unref the server here. It doesn't