@@ -1,3 +1,10 @@
+2008-01-17  Dan Winship  <danw@gnome.org>
+
+	* libsoup/soup-auth-digest.c (soup_auth_digest_compute_hex_urp)
+	(soup_auth_digest_compute_hex_a1)
+	(soup_auth_digest_compute_response): cast the second arg to
+	g_checksum_update to (guchar *) to avoid warnings
+
 2008-01-16  Dan Winship  <danw@gnome.org>
 
 	* libsoup/soup-headers.c (soup_headers_parse_status_line): Deal
